[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llambo"
version = "0.1.0"
description = "Llambo package"
requires-python = ">=3.8"
dependencies = [
    "aiohttp==3.8.5",
    "botorch==0.8.5",
    "ConfigSpace==0.7.1",
    "emcee==3.1.4",
    "gpytorch==1.10",
    "h5py==3.9.0",
    "HEBO==0.3.5",
    "jax==0.2.24",
    "langchain==0.1.9",
    "nashpobench2api==1.0.0",
    "openai==1.59.7",
    "openml==0.14.2",
    "optuna==3.3.0",
    "pandas==1.3.5",
    "parzen_estimator==0.5.8",
    "pyarrow==12.0.1",
    "scikit-learn==1.0.2",
    "scikit-optimize==0.9.0",
    "scipy==1.12.0",
    "smac==1.4.0",
    "tiktoken==0.6.0",
    "torch==2.0.1",
    "uncertainty-toolbox==0.1.1",
    "pynisher==0.6.4",
    "numpy==1.23.4",
    "LLM_utils @ git+https://github.com/JLX0/LLM_utilities.git"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["llambo"]

[tool.hatch.build]
include = [
    "llambo/**/*.py",
    "llambo/**/*.pyi",
]

[tool.hatch.metadata]
allow-direct-references = true